RESOLVED FIXED185162
IntlObject.cpp::removeUnicodeLocaleExtension() should not touch locales that end in '-u'
https://bugs.webkit.org/show_bug.cgi?id=185162
Summary IntlObject.cpp::removeUnicodeLocaleExtension() should not touch locales that ...
Robin Morisset
Reported 2018-05-01 07:42:37 PDT
Otherwise, lookupMatcher() will assume that the locale contains a '-u-' fragment and crash.
Attachments
Patch (2.54 KB, patch)
2018-05-01 07:45 PDT, Robin Morisset
no flags
Robin Morisset
Comment 1 2018-05-01 07:43:02 PDT
Robin Morisset
Comment 2 2018-05-01 07:45:46 PDT
WebKit Commit Bot
Comment 3 2018-05-01 08:47:35 PDT
Comment on attachment 339196 [details] Patch Clearing flags on attachment: 339196 Committed r231196: <https://trac.webkit.org/changeset/231196>
WebKit Commit Bot
Comment 4 2018-05-01 08:47:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.