IntlObject.cpp::removeUnicodeLocaleExtension() should not touch locales that end in '-u' https://bugs.webkit.org/show_bug.cgi?id=185162

Reviewed by Filip Pizlo.

JSTests:

* stress/incomplete-unicode-locale.js: Added.
(catch):

Source/JavaScriptCore:

* runtime/IntlObject.cpp:
(JSC::removeUnicodeLocaleExtension):


Canonical link: https://commits.webkit.org/200649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231196 268f45cc-cd09-0410-ab3c-d52691b4dbfc